RM#98751 Starting java migration for AOP 8.0