@@ -527,7 +527,7 @@ public class BudgetServiceImpl implements BudgetService {
               .all()
               .filter(
                   "self.budgetKey != null and self.id != ?1 AND self.globalBudget.statusSelect != ?2",
-                  budget.getId() != null ? budget.getId() : new Long(0),
+                  budget.getId() != null ? budget.getId() : Long.valueOf(0),
                   GlobalBudgetRepository.GLOBAL_BUDGET_STATUS_SELECT_ARCHIVED)
               .fetch();
 
